[gd_scene load_steps=20 format=3 uid="uid://bcu2ct4js5kii"]

[ext_resource type="Script" uid="uid://cmyddl4c7qitv" path="res://src/player_movement.gd" id="1_70asp"]
[ext_resource type="Texture2D" uid="uid://cqu0qmdu201ur" path="res://assets/Player/CARLA-Sheet.png" id="2_617f4"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://s30eelyl46w2" path="res://resources/new_animation_node_state_machine.tres" id="3_gpfak"]
[ext_resource type="PackedScene" uid="uid://bxttejet2mesc" path="res://scenes/camera.tscn" id="3_w4ket"]
[ext_resource type="Texture2D" uid="uid://bm0jtinikpipr" path="res://particles/particula.png" id="4_617f4"]
[ext_resource type="Material" uid="uid://fx12d0rsaocr" path="res://particles/dust_on_walk.tres" id="4_nlxoa"]
[ext_resource type="AudioStream" uid="uid://b02dwseaic20i" path="res://assets/audio/sound5.wav" id="5_5sloj"]

[sub_resource type="Animation" id="Animation_dldgu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_gpfak"]
resource_name = "idle_down"
length = 0.750025
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}

[sub_resource type="Animation" id="Animation_xnq8q"]
resource_name = "idle_left"
length = 0.750025
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}

[sub_resource type="Animation" id="Animation_ug1p8"]
resource_name = "idle_right"
length = 0.750025
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_mqni0"]
resource_name = "idle_up"
length = 0.750025
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_5wvfv"]
resource_name = "walk_down"
length = 0.666683
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_5bpga"]
resource_name = "walk_left"
length = 0.666683
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 14]
}

[sub_resource type="Animation" id="Animation_vp2ni"]
resource_name = "walk_right"
length = 0.666683
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 18]
}

[sub_resource type="Animation" id="Animation_tlvnn"]
resource_name = "walk_up"
length = 0.666683
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yr2sd"]
_data = {
&"RESET": SubResource("Animation_dldgu"),
&"idle_down": SubResource("Animation_gpfak"),
&"idle_left": SubResource("Animation_xnq8q"),
&"idle_right": SubResource("Animation_ug1p8"),
&"idle_up": SubResource("Animation_mqni0"),
&"walk_down": SubResource("Animation_5wvfv"),
&"walk_left": SubResource("Animation_5bpga"),
&"walk_right": SubResource("Animation_vp2ni"),
&"walk_up": SubResource("Animation_tlvnn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w4ket"]
size = Vector2(14.375, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nlxoa"]
size = Vector2(29, 26)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 15
script = ExtResource("1_70asp")
speed = 100.0
enable_rotation_juice = false

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_617f4")
hframes = 29
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_yr2sd")
}

[node name="player-tree" type="AnimationTree" parent="Sprite2D"]
tree_root = ExtResource("3_gpfak")
anim_player = NodePath("../AnimationPlayer")
parameters/movendo/blend_position = Vector2(-0.111643, 0.376923)
"parameters/Â´parado/blend_position" = Vector2(-1.39553, 0.207692)

[node name="Colisor" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_w4ket")
debug_color = Color(0.870436, 0.000498057, 0.848942, 0.42)

[node name="Camera" parent="." node_paths=PackedStringArray("target") instance=ExtResource("3_w4ket")]
zoom = Vector2(3, 3)
target = NodePath("..")

[node name="dust_particles" type="GPUParticles2D" parent="."]
scale = Vector2(0.05, 0.05)
emitting = false
amount = 16
texture = ExtResource("4_617f4")
one_shot = true
process_material = ExtResource("4_nlxoa")

[node name="interaction_area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="ColisorArea" type="CollisionShape2D" parent="interaction_area"]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_nlxoa")

[node name="PickupItem" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5sloj")

[node name="WireLinePreview" type="Line2D" parent="."]
